# Cognix

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/: client.py  runtime.py
bot/cogs/: activity_log.py  backups.py  giveaway.py  invite_tracker.py  moderation.py  music.py  stats.py  tickets.py  utility.py  welcome.py
bot/ipc/: __init__.py  consumer.py  schemas.py
bot/services/: __init__.py  audio_player.py
bot/utils/: embeds.py  time_parser.py
config/: __init__.py  constants.py  crypto.py  logging.py  settings.py
database/: __init__.py  base.py  seed_embeds.py  session.py
database/migrations/: env.py
database/models/: __init__.py  audit_log.py  backup.py  bot_profile.py  cog_state.py  discord_event.py  discord_message_cache.py  embed_template.py  giveaway.py  invite_stats.py  invite_uses.py  moderation.py  music_play_history.py  music_playlist.py  role_permission.py  server.py  server_cog_state.py  server_config.py  server_event_config.py  stats.py  system_config.py  ticket.py  ticket_panel.py  user.py  web_user.py  web_user_settings.py
docs/: api.md  commands.md  first-run.md  installation.md  pterodactyl.md  schema.md  security.md
frontend/: next.config.mjs  package.json  tailwind.config.ts
scripts/: config_dump.py  create_admin.py  healthcheck.py
web/: __init__.py  app.py  deps.py
web/middleware/: auth_refresh.py  rate_limit.py  request_id.py  setup_gate.py
web/routes/: audit.py  auth.py  backups.py  bot_control.py  cogs.py  embed_templates.py  moderation.py  music_panel.py  servers.py  settings.py  setup.py  stats.py  tickets.py  users.py  views.py  web_users.py  ws.py
web/schemas/: auth.py  common.py
web/security/: __init__.py  passwords.py  (+4 more)
(+61 files in other folders)
